--- a/Capitulo3.tex
+++ b/Capitulo3.tex
@@ -353,7 +353,7 @@ Con 33 iteraciones (T=33) el algoritmo \ref{Pseudo} generó la gráfica de la fi
 \end{figure}
 En esta gráfica, al igual que en la del modelo anterior, la curva superior azul corresponde a la ganancia de la mejor ruta probada hasta el momento, calculada con el valor de utilidad real asignado a cada uno de los \textit{bandits}; en la curva más inestable se presentan las ganancias distorcionads obtenidas en cada instante de tiempo por la ruta seleccionada; y en la curva inferior verdosa se muestra el promedio acumulado de estas ganancias, el cual, trata de acercarse a la curva de la ganancia real. 
 
-De otra parte, para estimar el comportamiento del algoritmo se dejan fijos en el grafo los datos de la matriz de adyacencia y del vector de valores de utilidad reales de los \textit{bandits}, para ejecutar las simulaciones que se explican en el siguiente capítulo.
+De otra parte, para estimar el comportamiento del algoritmo se dejan fijos en el grafo los datos de la matriz de adyacencia y del vector de valores de utilidad reales de los \textit{bandits}, para ejecutar los experimentos que se explican en el siguiente capítulo.
 
 
 %y se estima una ganancia que se genera aleatoriamente a una desviación estándar de su \textit{bandit} ... La decisión de usar una generación de números aleatorios que siguen una distribución normal con media en cero y desviación estándar en 1, es porque es la utilizada en la literatura de aprendizaje por refuerzo \citep{sutton1992reinforcement}, con la cual se ha probado el funcionamiento del modelo de decisión \textit{n-armed bandit}. 
