--- a/CapituloResultados.tex
+++ b/CapituloResultados.tex
@@ -1,11 +1,9 @@
 \chapter{Resultados computacionales}
 \label{resul_compu}
 
-En este capítulo se presentan los resultados de los experimentos que se ejecutaron para ajustar algunos parámetros del algoritmo y para verificar el efecto de la aleatoriedad en el mismo.
+En este capítulo se presentan los resultados de los experimentos que se ejecutaron para ajustar algunos parámetros del algoritmo y para verificar el efecto de la aleatoriedad en el mismo. Para ello se toma el grafo de 5 etapas y 13 nodos con valores fijos para sus respectivos \textit{bandits}, los cuales tiene la característica que, en cada etapa, uno de ellos es suficientemente mejor que los demás y hará que, seguramente, tal nodo forme parte  del vector de acciones seleccionadas al final de las 5 etapas. 
 
-Para ello se toma el grafo de 5 etapas y 13 nodos con valores fijos para sus respectivos \textit{bandits}, los cuales tiene la característica que, en cada etapa, uno de ellos es suficientemente mejor que los demás y hará que, seguramente, tal nodo forme parte  del vector de acciones seleccionadas al final de las 5 etapas. 
-
-Los valores que se fijaron para la matriz de adyacencia y para los \textit{bandits} reales son los siguientes:
+Los valores que se fijaron para la matriz de adyacencia y para los valores de utilidad reales de los \textit{bandits} del grafo que se usará en los experimentos descritas en este capítulo, son los siguientes:
 
 \renewcommand{\arraystretch}{0.5}
 %\begin{equation}
@@ -49,16 +47,20 @@ El grafo, con las aristas indicadas en la matriz de adyacencia y los valores de 
 	\label{Grafocaso1}
 \end{figure}
 
+\textit{Para estimar el desempeño del algoritmo se verificará la convergencia de los promedios de las ganancias distorsionadas hacia la ganancia real. Para facilitar la visualización de este comportamiento se hace una diferencia ente los valores de estas dos magnitudes, pero se normaliza para producir valores entre 0 y 1, con una sencilla división en el valor máximo posible, siendo el mejor valor el que más se acerque a la cero.}
 
 \section{Parámetro Deltha puro}
 
-Se retoman aquí las fórmulas con las que se consigue que el autómata aprenda y genere una matriz de probabilidades de transición entre nodos, para contextualizar al llamado \textbf{coeficiente de aprendizaje}. En la fórmula de probabilidades \ref{prob4} se observa que el exponente es una posición de un vector que se va actualizando de acuerdo al resultado de ganancia o pérdida de cada iteración, de la forma que se muestra en la fórmula \ref{exponente4}.
-\begin{eqnarray}\label{prob4}
-P(i \to j) = \frac{e^{v_j}}{\sum_k A_{i,k} e^{v_k}},
-\end{eqnarray}
+Se retoman aquí las fórmulas con las que se consigue que el autómata aprenda y genere una matriz de probabilidades de transición entre nodos, para contextualizar el \textbf{parámetro de aprendizaje} $\delta$ que otorga el cambio de una iteración a otra de los valores de utilidad de los nodos, como se se muestra en la fórmula \ref{exponente4}.
 \begin{eqnarray}\label{exponente4}
 v_j(\tau + 1) = v_j(\tau) \pm \delta,
 \end{eqnarray}
+
+Estos valores son los exponentes que se usan en la fórmula de cálculo de probabilidades \ref{prob4}, que también se va actualizando para todos los pares de nodos en cada iteración.
+\begin{eqnarray}\label{prob4}
+P(i \to j) = \frac{e^{v_j}}{\sum_k A_{i,k} e^{v_k}},
+\end{eqnarray}
+
 
 \subsection{Prueba inicial}
 
@@ -83,11 +85,11 @@ Se realiza inicialmente una prueba con 9 valores para $\delta$ entre 0.1 y 0.9, 
 \end{tabular}
 \label{tabla10}
 \end{table}
-Los rangos de diferencia superan el 50\%, independientemente de la cantidad de iteraciones que se ejecuten, por lo que se procede a experimentar con valores de $\deltha$ de órdenes diferentes. 
+Los rangos de diferencia superan el 50\%, independientemente de la cantidad de iteraciones que se ejecuten, por lo que se procede a experimentar con valores de $\delta$ de órdenes diferentes. 
 
 \subsection{Segunda prueba}
 
-Se ejecuta la aplicación con valores de $\deltha$ en magnitudes de centésimas, milésimas y diezmilésimas y con los mismos 10 valores para la cantidad de iteraciones $T$, cuyos resultados se aprecian en la tabla \ref{tabla100_10000}.
+Se ejecuta la aplicación con valores de $\delta$ en magnitudes de centésimas, milésimas y diezmilésimas y con los mismos 10 valores para la cantidad de iteraciones $T$, cuyos resultados se aprecian en la tabla \ref{tabla100_10000}.
 
 \begin{table}[H]
 \small
@@ -133,7 +135,7 @@ Se ejecuta la aplicación con valores de $\deltha$ en magnitudes de centésimas,
 \label{tabla100_10000}
 \end{table}
 
-Aquí se puede apreciar que, a pesar de disminuir notablemente los valores de $deltha$, se siguen obteniendo valores muy altos para la diferencia de las ganancias, con errores superiores al 40\%. Los promedios de estas diferencias se presentan en la tabla \ref{delthas_0000}
+Aquí se puede apreciar que, a pesar de disminuir notablemente los valores de $\delta$, se siguen obteniendo valores muy altos para la diferencia de las ganancias, con errores superiores al 40\%. Los promedios de estas diferencias se presentan en la tabla \ref{delthas_0000}
 
 \begin{table}[H]
 \centering
@@ -147,19 +149,19 @@ Aquí se puede apreciar que, a pesar de disminuir notablemente los valores de $d
 \label{delthas_0000}
 \end{table}
 
-Con estos resultados, se formulan experimentos con una mayor variación para $deltha$ y para la cantidad de Iteraciones $T$, que permita un análisis estadístico de la influencia de estas dos variables en los resultados esperados.
+Con estos resultados, se formulan experimentos con una mayor variación para $\delta$ y para la cantidad de Iteraciones $T$, que permita un análisis estadístico de la influencia de estas dos variables en los resultados esperados.
 
 \subsection{Experimentos}
 
 \subsubsection{Variable dependiente}
 
-Se define como variable dependiente para este conjunto de experimentos a la diferencia entre la ganancia máxima y la ganancia obtenida en la ejecución. Para estimar el error que se está generando a partir de esta diferencia, se normaliza esta última dividiéndola en el valor de la ganancia máxima, de forma que se obtengan valores entre cero y uno.
+Se define como variable dependiente para este conjunto de experimentos a la diferencia entre la ganancia real máxima y la ganancia distorsionada media obtenida en la ejecución, normalizada de forma que se obtengan valores entre cero y uno. Se busca minimizar esta diferencia.
 
 \subsubsection{Variables independientes}
 Los experimentos se diseñan teniendo en cuenta que las variables independientes corresponden a: 
 \begin{itemize}
     \item Factor de aprendizaje $\delta$
-    \item Número de iteraciones
+    \item Número de iteraciones $T$
 \end{itemize}
 
 \subsubsection{Validez}
@@ -173,14 +175,11 @@ Se realizan los cálculos de medias, varianzas y de análisis de varianza (ANOVA
 
 \subsubsection{Experimento uno}
 
-Se diseña un experimento con las las variables independientes: T y $\delta$, correspondientes a la cantidad de iteraciones y a la variable que ha de incentivar la selección o no de un nodo, con el aumento o disminución de probabilidad de ser preferido en las siguientes iteraciones y, por supuesto, en el camino óptimo, como se ve en la ecuación \ref{delta}, ya explicada en el modelo de la solución; la variable dependiente corresponde a la diferencia normalizada de las ganancias.
-\begin{eqnarray}\label{delta}
-v_j(\tau + 1) = v_j(\tau) \pm \delta,
-\end{eqnarray}
+Se diseña un experimento con las variables independientes: $T$ y $\delta$, correspondientes a la cantidad de iteraciones y al factor de aprendizaje que ha de incentivar la selección o no de un nodo, ya que afecta la matriz de probabilidades de transición; la variable dependiente corresponde a la diferencia normalizada de las ganancias, ya descrita.
 
 %Se adiciona a la aplicación una variable que mide el porcentaje de veces que el vector final corresponde al esperado, la cual permite corroborar que las soluciones con diferencias de ganancia cercanas a cero, ofrecen, en una cantidad cercana al 100\%, el vector solución que se espera y que la convergencia de la ganancia obtenida, sí se está dando hacia la ganancia óptima.
 
-Se usan valores para T de 100, 1000, 10000 y 100000 iteraciones y valores de $\delta$ de $10^{2}$, $10^{1}$, $10^{0}$, $10^{-1}$, $10^{-2}$, $10^{-3}$ y $10^{-4}$. Este experimento se ejecuta varias veces, encontrando diferentes valores en sus resultados para los mismo valores de T y de $\delta$, lo que se explica por la influencia de la aleatoriedad en estos resultados y se corrobora con el valor del estadístico de prueba F y el valor de P de las tablas ANOVA. Las gráficas correspondientes a tres ejecuciones de este experimento y los resultados del ANOVA correspondiente, se presentan en la tabla \ref{exp1}.
+Se usan valores para $T$ de 100, 1000, 10000 y 100000 iteraciones y valores de $\delta$ de $10^{2}$, $10^{1}$, $10^{0}$, $10^{-1}$, $10^{-2}$, $10^{-3}$ y $10^{-4}$. Este experimento se ejecuta varias veces, encontrando diferentes valores en sus resultados para los mismo valores de $T$ y de $\delta$, lo que se explica por la influencia de la aleatoriedad en estos resultados y se corrobora con el valor del estadístico de prueba $F$ y el valor de $P$ de las tablas ANOVA. Las gráficas correspondientes a tres ejecuciones de este experimento y los resultados del ANOVA correspondiente, se presentan en la tabla \ref{exp1}.
 \begin{table}[H]
 \caption{Experimento uno}
 \centering
@@ -194,9 +193,9 @@ Se usan valores para T de 100, 1000, 10000 y 100000 iteraciones y valores de $\d
 \label{exp1}
 \end{table}
 
-En las tres filas de la tabla \ref{exp1} se notan cambios en las medias y las varianzas obtenidos de una ejecución a otra, y en las tablas ANOVA se puede verificar que la probabilidad $PR(>F)$ se mantuvo, en casi todos los caso, en valores superiores a 0.05, pero en el tercero, para la variable $Deltha$ sí se obtuvo un valor menor de 0.05 en dicha columna. Estos resultados no nos permiten concluir que las variables independientes tengan un alto grado de significancia sobre la variable dependiente; además, se esperaría que, en general, el estadístico de prueba $F$ tuviera siempre un valor distante de la unidad y no es así. 
+En las tres filas de la tabla \ref{exp1} se notan cambios en las medias y las varianzas obtenidos de una ejecución a otra, y en las tablas ANOVA se puede verificar que la probabilidad $PR(>F)$ se mantuvo con valores superiores a 0.05, en casi todos los casos; en  pero en el tercer caso, para la variable $\delta$ sí se obtuvo un valor menor de 0.05 en dicha columna de probabilidad. Estos resultados no nos permiten concluir que las variables independientes tengan un alto grado de significancia sobre la variable dependiente; además, se esperaría que, en general, el estadístico de prueba $F$ tuviera siempre un valor distante de la unidad y los seis valores obtenidos son relativamente cercanos a la unidad. 
 
-Además estas gráficas muestran que, independientemente de la cantidad de iteraciones que se hagan (variable T, eje horizontal), se obtienen resultados muy altos para la diferencia normalizada de ganancias, con medias que llegan a estar por encima del 70\%. Coincide en las tres ocasiones que la varianza en las cajas para el menor valor de T es la más pequeña; esto se debe a que en estos casos, y especialmente cuando se tienen valores grandes para $\delta$, el algoritmo tiende a aprender una de las primeras respuestas que, aleatoriamente, debió validar y se queda con ella convergiendo rápidamente a cualquier respuesta que no es necesariamente la óptima. Se procede entonces a verificar lo que sucede con valores grandes para T y pequeños para $\delta$.
+Además estas gráficas muestran que, independientemente de la cantidad de iteraciones que se hagan (variable $T$, eje horizontal), se obtienen resultados muy altos para la diferencia normalizada de ganancias, con medias que llegan a estar por encima del 70\%. Coincide en las tres ocasiones que la varianza en las cajas para el menor valor de $T$ es la más pequeña; esto se debe a que en estos casos, y especialmente cuando se tienen valores grandes para $\delta$, el algoritmo tiende a aprender una de las primeras respuestas que, aleatoriamente, debió validar y se queda con ella convergiendo rápidamente a cualquier respuesta, que no es necesariamente la óptima. Se procede entonces a verificar lo que sucede con valores grandes para $T$ y pequeños para $\delta$.
 
 Se quiere observar si algunos de los valor de $T$ y de $delta$ que en la gráfica muestran mejores resultados, influyen efectivamente en la optimización de la diferencia entre ganancias.
 
@@ -204,7 +203,9 @@ Se quiere observar si algunos de los valor de $T$ y de $delta$ que en la gráfic
 
 %Se diseña un experimento con las mismas dos variables independientes: T y $\delta$, y la misma variable dependiente corresponde a la diferencia normalizada de las ganancias que debe corresponder con los resultados del porcentaje de veces que el vector final corresponde al esperado.
 
-Se usan, en esta ocasión, valores para $T$ de 100000 y 100001 (es decir, casi la misma cantidad) y valores de $delta$ de $10^{-3}$ y $10^{-4}$. Este experimento se ejecuta varias veces, encontrando diferentes valores en sus resultados para los mismos valores de $T$ y de $\delta$, lo que se explica como una alta influencia de la aleatoriedad. Tres resultados con los mismos valores de la variables independientes se muestran en la figura \ref{exp2}
+Se usan, en esta ocasión, valores para $T$ de 100000 y 100001 (se deja casi la misma cantidad, para estimar básicamente el comportamiento de la variable $\delta$) y valores de $delta$ de $10^{-3}$ y $10^{-4}$. Este experimento se ejecuta varias veces, encontrando diferentes valores en sus resultados para los mismos valores de $T$ y de $\delta$, lo que se explica como una alta influencia de la aleatoriedad. 
+
+Tres resultados con los mismos valores de la variables independientes se muestran en la figura \ref{exp2}
 
 \begin{table}[H]
 \caption{Experimento dos}
@@ -225,10 +226,13 @@ Se decide, entonces trabajar con una variable $\delta$ dependiente de la magnitu
 
 \section{Parámetro Gamma}
 
-Se procede a experimentar con $delta$ autoajustable, que depende del valor de la ganancia que recibe la ruta probada, de forma que, inclusive, el signo se ajustará cuando hayan pérdidas, sin hacerse necesario decidir entre suma y resta. Se involucra una nueva variable Gamma ($\gamma$) a la que se le variarán sus valores y de la que se obtiene $\delta$ para la ecuación \ref{exponente5}, al multiplicar $\gamma$ por la ganancia o recompensa recibida al final del camino.
-\begin{eqnarray}\label{exponente5}
-v_j(\tau + 1) = v_j(\tau) + \delta,
+Se procede a definir $delta$ en función de la ganancia que se recibe al final de la ruta probada, de forma que, inclusive, el signo se ajustará cuando hayan pérdidas, sin hacerse necesario decidir entre suma y resta. Se involucra un factor de aprendizaje Gamma ($\gamma$) que dosificará la retribución que tendrá la ganancia en el ajuste de los valores de utilidad de los \textit{bandits} asociados a los nodos de la ruta probada, como se aprecia en la ecuación \ref{gama}, al multiplicar $\gamma$ por la ganancia ($Gain$) o recompensa recibida al final del camino.
+\begin{eqnarray}
+\label{gama}
+v_j(\tau + 1) = v_j(\tau) + \gamma Gain,
 \end{eqnarray}
+
+El valor de $\gamma$ ha de ser lo suficientemente pequeño para garantizar que al multiplicarlo por la ganancia, la reduzca a valores menores de 1 en su valor absoluto.
 
 \subsection{Primer caso de estudio}
 
@@ -301,12 +305,12 @@ Inicialmente se realizó una prueba para establecer el porcentaje de ejecuciones
 
 El hecho de que no todas las ejecuciones con los mismos valores de entrada, presenten la misma convergencia, refleja la influencia que sigue presentando la aleatoriedad en este modelo, lo que no es muy deseable.
 
-Dado que esta prueba se hizo con un único valor para $T$ y un único valor para $Gamma$, se procedió a explorar otros valores para dichas variables que puedan mejorar este porcentaje de éxito.
+Dado que esta prueba se hizo con un único valor para $T$ y un único valor para $\gamma$, se procedió a explorar otros valores para dichas variables que puedan mejorar este porcentaje de éxito.
 
 \subsection{Segundo caso de estudio}
 %\section{Influencia al cambiar el coeficiente de aprendizaje}
 
-Se hace necesario tomar valores para $GAmma$ ($\gamma$) del orden de diezmilésimas, para que al multiplicarlo por la ganancia. que para este ejemplo alcanza valores cercanos a 500 unidades, se obtengan valores de $\delta$ inferiores a uno. Los resultados se observan en la tabla \ref{experimento1}.
+Se hace necesario tomar valores para $\gamma$ del orden de diezmilésimas, para que al multiplicarlo por la ganancia. que para este ejemplo alcanza valores cercanos a 500 unidades, se obtengan valores de $\delta$ inferiores a uno. Los resultados se observan en la tabla \ref{experimento1}.
 
 \begin{table}[H]
 \centering
@@ -316,20 +320,20 @@ Se hace necesario tomar valores para $GAmma$ ($\gamma$) del orden de diezmilési
 %\multicolumn{7}{c}{DISTANCIAS EN GANANCIAS PROMEDIO}                                                                                   %                                            \\
 GAMA                 & \multicolumn{6}{c}{ITERACIONES}    \\ \hline
 \multicolumn{1}{l}{} & \multicolumn{1}{c}{100} & \multicolumn{1}{c}{300} & \multicolumn{1}{c}{500} & \multicolumn{1}{c}{700} & \multicolumn{1}{c}{900} & \multicolumn{1}{c}{1000} \\ \hline
-0,00001              & 0,368                   & 0,36                    & 0,344                   & 0,328                   & 0,322                   & 0,272                    \\
+0,00001              & 0,368                   & 0,360                    & 0,344                   & 0,328                   & 0,322                   & 0,272                    \\
 0,00025              & 0,102                   & 0,044                   & 0,034                   & 0,066                   & 0,052                   & 0,042                    \\
-0,00050              & 0,05                    & 0,078                   & 0,082                   & 0,072                   & 0,082                   & 0,074                    \\
-0,00075              & 0,08                    & 0,092                   & 0,086                   & 0,09                    & 0,078                   & 0,09                     \\
-0,00099              & 0,092                   & 0,102                   & 0,084                   & 0,084                   & 0,1                     & 0,106         \\ \hline
+0,00050              & 0,050                    & 0,078                   & 0,082                   & 0,072                   & 0,082                   & 0,074                    \\
+0,00075              & 0,080                    & 0,092                   & 0,086                   & 0,090                    & 0,078                   & 0,090                     \\
+0,00099              & 0,092                   & 0,102                   & 0,084                   & 0,084                   & 0,100                     & 0,106         \\ \hline
 \end{tabular}
 \label{experimento1}
 \end{table}
 
-Los resultados son considerablemente mejores que los que se obtuvieron con $\delta$ puro, obteniendo un promedio en el error para esta tabla del 13\% (o del 8\%, si se elimina la primera fila donde se encuentran los valores más altos). También, se puede notar en esta tabla que los errores están influidos tanto por el valor de Gamma, como por el número de iteraciones que se ejecutan.
+Los resultados son considerablemente mejores que los que se obtuvieron con $\delta$, obteniendo un promedio en el error para esta tabla del 13\% (o del 8\%, si se elimina la primera fila donde se encuentran los valores más altos). También, se puede notar, en esta tabla, que los errores están influidos tanto por el valor de $\gamma$, como por el número de iteraciones que se ejecutan.
 
 Utilizando los datos de la tabla \ref{experimento1}, se obtienen promedios y varianza para cada fila y para cada columna, como se presenta en la tabla \ref{media_var_1}.
 
-\begin{table}[H]
+\begin{table}[h]
 \centering
 %\small
 \caption{Medias y varianzas en Promedios de distancias usando Gamma}
@@ -352,9 +356,9 @@ Utilizando los datos de la tabla \ref{experimento1}, se obtienen promedios y var
 \label{media_var_1}
 \end{table}
 
-Aquí se puede notar que el valor de $\gamma$, no es directamente proporcional al promedio de las  diferencias entre ganancias, mientras que cada vez que se aumentó el número de iteraciones $T$ en el experimento, se obtuvieron mejoras, es decir, disminuyó el valor de la variable dependiente.
+Aquí se puede notar que el valor de $\gamma$, no afecta significativamente las diferencias entre ganancias, mientras que cada vez que se aumentó el número de iteraciones $T$ en el experimento, los cambios fueron menores en el variable dependiente, lo que se apoya con el análisis de los resultados de las varianzas.
 
-En la misma tabla \ref{media_var_1} se puede apreciar que los valores de las varianzas para Gamma son inferior a los de las varianzas para la cantidad de iteraciones, lo que indica que cambiar la cantidad de iteraciones para cada valor de Gamma no tiene gran importancia al calcular el promedio de diferencias entre ganancias.
+Se obtienen valores de varianzas pequeños, lo que es deseable al momento de tomar conclusiones sobre las medias dadas.
 
 %Se prevé que esta variabilidad disminuya si no se tienen en cuenta los datos asociados al primer valor de $\gamma$, puesto que sus valores son bastante diferentes a los del resto de la tabla.
 
@@ -368,17 +372,17 @@ Se procede entonces a formular un experimento para establecer estadísticamente 
 
 \subsubsection{Variable dependiente}
 
-Se define como variable dependiente para este conjunto de experimentos a la diferencia entre la ganancia máxima y la ganancia obtenida en la ejecución. Para estimar el error que se está generando a partir de esta diferencia, se normaliza esta última dividiéndola en el valor de la ganancia máxima, de forma que se obtengan valores entre cero y uno.
+Se define como variable dependiente para este conjunto de experimentos a la diferencia entre la ganancia real máxima y la ganancia distorsionada obtenida en la ejecución, diferencia que se normaliza, de forma que se obtengan valores entre cero y uno.
 
 \subsubsection{Variables independientes}
 Los experimentos se diseñan teniendo en cuenta que las variables independientes corresponden a: 
 \begin{itemize}
     \item Coeficiente del factor de aprendizaje $\gamma$
-    \item Número de iteraciones
+    \item Número de iteraciones $T$
 \end{itemize}
 
 \subsubsection{Validez}
-Para el control o validez interna se ha de comprobar que las variables, aquí definidas como independientes, son las que realmente influyen en las dependientes, y no factores externos como la aleatoriedad. Se toman, entonces, los resultados de 100 experimentos con cada uno de los valores de control sobre las variables independientes.
+Para el control o validez interna se ha de comprobar que las variables, aquí definidas como independientes, son las que realmente influyen en la variable dependiente, y no factores externos como la aleatoriedad. Se toman, entonces, los resultados de 100 experimentos con cada uno de los valores de control sobre las variables independientes.
 
 \subsubsection{Técnica}
 La técnica que se usa en este experimento es la simulación. Es un instrumento objetivo, confiable y válido. La validez es alta, puesto que el computador siempre tratará los valores de la misma manera; se espera que con un mismo valor de variables independientes se obtengan resultados similares en las variables dependientes.
