--- a/CapituloResultados.tex
+++ b/CapituloResultados.tex
@@ -66,7 +66,7 @@ P(i \to j) = \frac{e^{v_j}}{\sum_k A_{i,k} e^{v_k}},
 
 Se realiza inicialmente una prueba con 9 valores para $\delta$ entre 0.1 y 0.9, sumando, en caso de ganancia y restando, en caso de pérdida, para motivar o desmotivar al autómata para que en el paso siguiente seleccione los nodos que reciben el refuerzo; la cantidad de iteraciones $T$ se varió entre 100 y 1000, con intervalos de 100. Las diferencias normalizadas que se encontraron entre la ganancia real y cada una de las ganancias que en promedio se obtuvieron se ven en la tabla \ref{tabla10}.
 
-\begin{table}[H]
+\begin{table}[h]
 \small
 \caption{Rangos de diferencia de ganancias con Deltha en décimas}
 \begin{tabular}{crrrrrrrrrr}
@@ -91,7 +91,7 @@ Los rangos de diferencia superan el 50\%, independientemente de la cantidad de i
 
 Se ejecuta la aplicación con valores de $\delta$ en magnitudes de centésimas, milésimas y diezmilésimas y con los mismos 10 valores para la cantidad de iteraciones $T$, cuyos resultados se aprecian en la tabla \ref{tabla100_10000}.
 
-\begin{table}[H]
+\begin{table}[h]
 \small
 
 \caption{Rangos de diferencia de ganancias con Deltha en otras unidades}
@@ -135,9 +135,9 @@ Se ejecuta la aplicación con valores de $\delta$ en magnitudes de centésimas, 
 \label{tabla100_10000}
 \end{table}
 
-Aquí se puede apreciar que, a pesar de disminuir notablemente los valores de $\delta$, se siguen obteniendo valores muy altos para la diferencia de las ganancias, con errores superiores al 40\%. Los promedios de estas diferencias se presentan en la tabla \ref{delthas_0000}
+Aquí se puede apreciar que, a pesar de disminuir notablemente los valores de $\delta$, se siguen obteniendo valores muy altos para la diferencia de las ganancias, con errores superiores al 40\%. Los promedios de estas diferencias se presentan en la tabla \ref{delthas_0000}, donde además se aprecia que no hay una diferencia relevante para las diferentes magnitudes de $\delta$.
 
-\begin{table}[H]
+\begin{table}[h]
 \centering
 %\small
 \caption{Promedios de los resultados variando décimas en Deltha}
@@ -181,7 +181,7 @@ Se diseña un experimento con las variables independientes: $T$ y $\delta$, corr
 
 Se usan valores para $T$ de 100, 1000, 10000 y 100000 iteraciones y valores de $\delta$ de $10^{2}$, $10^{1}$, $10^{0}$, $10^{-1}$, $10^{-2}$, $10^{-3}$ y $10^{-4}$. Este experimento se ejecuta varias veces, encontrando diferentes valores en sus resultados para los mismo valores de $T$ y de $\delta$, lo que se explica por la influencia de la aleatoriedad en estos resultados y se corrobora con el valor del estadístico de prueba $F$ y el valor de $P$ de las tablas ANOVA. Las gráficas correspondientes a tres ejecuciones de este experimento y los resultados del ANOVA correspondiente, se presentan en la tabla \ref{exp1}.
 \begin{table}[H]
-\caption{Experimento uno}
+\caption{Experimento uno con Deltha}
 \centering
 \begin{tabular}[c]{llll}
 \multicolumn{1}{p{2.9cm}}{\textbf{GRÁFICA PARA $\delta$}} & \multicolumn{1}{p{2.9cm}}{\textbf{GRÁFICA PARA $T$}} & \multicolumn{1}{p{2.9cm}}{\textbf{GRÁFICA PARA $T$ y $\delta$}} & \multicolumn{1}{p{2.9cm}}{\textbf{ANOVA}}  \\ \hline
@@ -199,7 +199,7 @@ Además estas gráficas muestran que, independientemente de la cantidad de itera
 
 Se quiere observar si algunos de los valor de $T$ y de $delta$ que en la gráfica muestran mejores resultados, influyen efectivamente en la optimización de la diferencia entre ganancias.
 
-\subsubsection{Experimento dos}
+\subsubsection{Experimento dos con Deltha}
 
 %Se diseña un experimento con las mismas dos variables independientes: T y $\delta$, y la misma variable dependiente corresponde a la diferencia normalizada de las ganancias que debe corresponder con los resultados del porcentaje de veces que el vector final corresponde al esperado.
 
@@ -207,7 +207,7 @@ Se usan, en esta ocasión, valores para $T$ de 100000 y 100001 (se deja casi la 
 
 Tres resultados con los mismos valores de la variables independientes se muestran en la figura \ref{exp2}
 
-\begin{table}[H]
+\begin{table}[h]
 \caption{Experimento dos}
 \centering
 \begin{tabular}[c]{llll}
@@ -226,13 +226,13 @@ Se decide, entonces trabajar con una variable $\delta$ dependiente de la magnitu
 
 \section{Parámetro Gamma}
 
-Se procede a definir $delta$ en función de la ganancia que se recibe al final de la ruta probada, de forma que, inclusive, el signo se ajustará cuando hayan pérdidas, sin hacerse necesario decidir entre suma y resta. Se involucra un factor de aprendizaje Gamma ($\gamma$) que dosificará la retribución que tendrá la ganancia en el ajuste de los valores de utilidad de los \textit{bandits} asociados a los nodos de la ruta probada, como se aprecia en la ecuación \ref{gama}, al multiplicar $\gamma$ por la ganancia ($Gain$) o recompensa recibida al final del camino.
+Se procede a cambiar $\delta$ por un valor que cambiará en función de la ganancia que se recibe al final de la ruta probada, de forma que, inclusive, el signo se ajustará cuando hayan pérdidas, sin hacerse necesario decidir entre suma y resta. Para ello se involucra un factor de aprendizaje Gamma ($\gamma$) que dosificará la retribución que tendrá la ganancia en el ajuste de los valores de utilidad de los \textit{bandits} asociados a los nodos de la ruta probada, como se aprecia en la ecuación \ref{gama}, al multiplicar $\gamma$ por la ganancia ($Gain$) o recompensa recibida al final del camino.
 \begin{eqnarray}
 \label{gama}
-v_j(\tau + 1) = v_j(\tau) + \gamma Gain,
+v_j(\tau + 1) = v_j(\tau) + \gamma Gain
 \end{eqnarray}
 
-El valor de $\gamma$ ha de ser lo suficientemente pequeño para garantizar que al multiplicarlo por la ganancia, la reduzca a valores menores de 1 en su valor absoluto.
+El valor de $\gamma$ ha de ser lo suficientemente pequeño para garantizar que, al multiplicarlo por la ganancia, la cantidad se reduzca a valores menores de 1 en su valor absoluto.
 
 \subsection{Primer caso de estudio}
 
@@ -307,10 +307,35 @@ El hecho de que no todas las ejecuciones con los mismos valores de entrada, pres
 
 Dado que esta prueba se hizo con un único valor para $T$ y un único valor para $\gamma$, se procedió a explorar otros valores para dichas variables que puedan mejorar este porcentaje de éxito.
 
-\subsection{Segundo caso de estudio}
-%\section{Influencia al cambiar el coeficiente de aprendizaje}
+\subsection{Experimentos}
 
-Se hace necesario tomar valores para $\gamma$ del orden de diezmilésimas, para que al multiplicarlo por la ganancia. que para este ejemplo alcanza valores cercanos a 500 unidades, se obtengan valores de $\delta$ inferiores a uno. Los resultados se observan en la tabla \ref{experimento1}.
+Al igual que para los experimento que hicieron con la variable $\delta$, se explican loe elementos en seguida.
+
+\subsubsection{Variable dependiente}
+
+Se define como variable dependiente para este conjunto de experimentos a la diferencia entre la ganancia real máxima y la ganancia distorsionada obtenida en la ejecución, diferencia que se normaliza, de forma que se obtengan valores entre cero y uno.
+
+\subsubsection{Variables independientes}
+Los experimentos se diseñan teniendo en cuenta que las variables independientes corresponden a: 
+\begin{itemize}
+    \item Coeficiente del factor de aprendizaje $\gamma$
+    \item Número de iteraciones $T$
+\end{itemize}
+
+\subsubsection{Validez}
+Para el control o validez interna se ha de comprobar que las variables, aquí definidas como independientes, son las que realmente influyen en la variable dependiente, y no factores externos como la aleatoriedad. Se toman, entonces, los resultados de 100 experimentos con cada uno de los valores de control sobre las variables independientes.
+
+\subsubsection{Técnica}
+La técnica que se usa en este experimento es la simulación. Es un instrumento objetivo, confiable y válido. La validez es alta, puesto que el computador siempre tratará los valores de la misma manera; se espera que con un mismo valor de variables independientes se obtengan resultados similares en las variables dependientes.
+
+\subsubsection{Herramientas}
+Se realizan los cálculos de medias, varianzas y de análisis de varianza (ANOVA) que permitan concluir la forma en que cada variable independiente influye en la dependiente.
+
+\subsubsection{Experimento uno}
+
+Se asignan valores a las variables dependientes así: $T$ toma valores de 100, 300, 500, 700, 900 y 1000; y $\gamma$ valores de 0.00001, 0.00025, 0.00049, 0.00075, 0.0001, con los que se pretende cubrir los valores de $\gamma$ del orden de $10^{-4}$.
+
+Los valores de los promedios en la diferencia de las ganancias que se obtuvieron se aprecian en la tabla \ref{experimento1}.
 
 \begin{table}[H]
 \centering
@@ -356,82 +381,31 @@ Utilizando los datos de la tabla \ref{experimento1}, se obtienen promedios y var
 \label{media_var_1}
 \end{table}
 
-Aquí se puede notar que el valor de $\gamma$, no afecta significativamente las diferencias entre ganancias, mientras que cada vez que se aumentó el número de iteraciones $T$ en el experimento, los cambios fueron menores en el variable dependiente, lo que se apoya con el análisis de los resultados de las varianzas.
+Aquí se puede notar que el valor de $\gamma$, no afecta significativamente las diferencias entre ganancias, mientras que cada vez que se aumentó el número de iteraciones $T$ en el experimento, los cambios fueron menores en la variable dependiente, lo que se apoya con el análisis de los resultados de las varianzas.
 
 Se obtienen valores de varianzas pequeños, lo que es deseable al momento de tomar conclusiones sobre las medias dadas.
 
-%Se prevé que esta variabilidad disminuya si no se tienen en cuenta los datos asociados al primer valor de $\gamma$, puesto que sus valores son bastante diferentes a los del resto de la tabla.
-
-Se procede entonces a formular un experimento para establecer estadísticamente la relación que aquí se intuye.
-
-%\section{Análisis estadístico}
-
-%\subsection{Prueba inicial}
-%Se plantea una prueba que permita estimar si el valor de Gamma y el número de iteraciones son factores que afectan la diferencia normalizada entre la ganancia obtenida en cada ejecución del algoritmo y la ganancia óptima esperada.
-\subsection{Experimentos}
-
-\subsubsection{Variable dependiente}
-
-Se define como variable dependiente para este conjunto de experimentos a la diferencia entre la ganancia real máxima y la ganancia distorsionada obtenida en la ejecución, diferencia que se normaliza, de forma que se obtengan valores entre cero y uno.
-
-\subsubsection{Variables independientes}
-Los experimentos se diseñan teniendo en cuenta que las variables independientes corresponden a: 
-\begin{itemize}
-    \item Coeficiente del factor de aprendizaje $\gamma$
-    \item Número de iteraciones $T$
-\end{itemize}
-
-\subsubsection{Validez}
-Para el control o validez interna se ha de comprobar que las variables, aquí definidas como independientes, son las que realmente influyen en la variable dependiente, y no factores externos como la aleatoriedad. Se toman, entonces, los resultados de 100 experimentos con cada uno de los valores de control sobre las variables independientes.
-
-\subsubsection{Técnica}
-La técnica que se usa en este experimento es la simulación. Es un instrumento objetivo, confiable y válido. La validez es alta, puesto que el computador siempre tratará los valores de la misma manera; se espera que con un mismo valor de variables independientes se obtengan resultados similares en las variables dependientes.
-
-\subsubsection{Herramientas}
-Se realizan los cálculos de medias, varianzas y de análisis de varianza (ANOVA) que permitan concluir la forma en que cada variable independiente influye en la dependiente.
-
-\subsubsection{Experimento uno}
-
-Se asignan valores a las variables dependientes así: $T$ toma valores de 100, 300, 500, 700, 900 y 1000; y $\gamma$ valores de 0.00001, 0.00025, 0.00049, 0.00075, 0.0001, con los que se pretende cubrir los valores de $\gamma$ del orden de $10^{-4}$.
-
-Los valores de los promedios en la diferencia de las ganancias que se obtuvieron se aprecian en la tabla \ref{exp0}
-
-\begin{table}[]
-\centering
-%\small
-\caption{Promedios de diferencias de ganancias variando Gamma y $T$}
-\begin{tabular}{cllllll}
-%\multicolumn{7}{c}{DISTANCIAS EN GANANCIAS PROMEDIO}                                                                                   %                                            \\
-GAMA                 & \multicolumn{6}{c}{ITERACIONES}    \\ \hline
-\multicolumn{1}{l}{} & \multicolumn{1}{c}{100} & \multicolumn{1}{c}{300} & \multicolumn{1}{c}{500} & \multicolumn{1}{c}{700} & \multicolumn{1}{c}{900} & \multicolumn{1}{c}{1000} \\ \hline
-0,00001              & 0,703                   & 0,691                    & 0,679                   & 0,662                   & 0,643                   & 0,635                    \\
-0,00025              & 0,470                   & 0,220                   & 0,157                   & 0,191                   & 0,156                   & 0,129                    \\
-0,00050              & 0,301                    & 0,222                   & 0,201                   & 0,178                   & 0,189                   & 0,173                    \\
-0,00075              & 0,280                    & 0,226                   & 0,204                   & 0,207                    & 0,179                   & 198                     \\
-0,00099              & 0,278                   & 0,235                   & 0,188                   & 0,188                   & 0,215                     & 0,274      \\ \hline             
-\end{tabular}
-\label{exp0}
-\end{table}
-
 Este comportamiento se puede visualizar en los diagramas BoxPlot para Gamma y para el número de iteraciones que se ven en las figuras \ref{Cajas1} y \ref{Cajas1_1}, donde se aprecia, además que el incremento o decremento en los valores de gamma, no influye directamente en la diferencia entre ganancias mientras que el aumento en el número de iteraciones va disminuyendo, en general, dicha diferencia, aunque sea en cantidades muy pequeñas.
 
-\begin{figure} [H]
+
+\begin{figure} [h]
 	\centering
 	\includegraphics[scale=1]{Cajas1.png}
 	\caption{Diagramas BoxPlot para la variable Gamma}
 	\label{Cajas1}
 \end{figure}
 
-\begin{figure} [H]
+\begin{figure} 
 	\centering
 	\includegraphics[scale=1]{Cajas1_1.png}
 	\caption{Diagramas BoxPlot para la variable Iteraciones}
 	\label{Cajas1_1}
 \end{figure}
 
-Para corroborar esta observación se genera el análisis de varianza ANOVA para los datos de la misma tabla \ref{exp0}, cuyo resultado se presenta en la tabla \ref{tab:Anova1}. 
 
-\begin{table}[H]
+Para corroborar esta observación se genera el análisis de varianza ANOVA para los datos de la tabla \ref{experimento1}, cuyo resultado se presenta en la tabla \ref{tab:Anova1}. 
+
+\begin{table} [h]
 \centering\caption{ANOVA para Distancias en ganancias usando Gamma}
 \small
 \begin{tabular}{lrrrr} \\ 
@@ -454,10 +428,10 @@ Se quiere entonces, encontrar un valor de Gamma que ofrezca buenos resultados, y
 
 %Se diseña un experimento con dos variables independientes: T y $\gamma$, correspondientes a la cantidad de iteraciones y a la variable que, multiplicada por la ganancia total asociada a la secuencia de nodos que se haya probado, como parámetro de aprendizaje. Se recuerda que la variable dependiente corresponde a la diferencia normalizada de las ganancias y que también se calcula el porcentaje de veces que el vector final corresponde al esperado cuyo valor debe estar cercano al 100\%, cuando el de la diferencia de ganancia se acerque al 0\%.
 
- Para este experimento se usan valores para T de 100, 1000, 10000 y 100000 iteraciones y valores de $\gamma$ de $10^{0}$, $10^{-1}$, $10^{-2}$, $10^{-3}$, $10^{-4}$, $10^{-5}$, $10^{-6}$. Al ejecutar este experimento varias veces, se encuentra que los valores de sus resultados para los mismo valores de T y de $\gamma$, tienen tendencias marcadas, lo que permite establecer que la influencia de la aleatoriedad en estos resultados es menor que la que se observó en los experimentos anteriores. 
+Para este experimento se usan valores para T de 100, 1000, 10000 y 100000 iteraciones y valores de $\gamma$ de $10^{0}$, $10^{-1}$, $10^{-2}$, $10^{-3}$, $10^{-4}$, $10^{-5}$, $10^{-6}$. Al ejecutar este experimento varias veces, se encuentra que los valores de sus resultados para los mismo valores de T y de $\gamma$, tienen tendencias marcadas, lo que permite establecer que la influencia de la aleatoriedad en estos resultados es menor que la que se observó en los experimentos anteriores. 
 
 \begin{table}[H]
-\caption{Experimento tres}
+\caption{ANOVA para el Experimento dos con Gamma}
 \centering
 \begin{tabular}[c]{llll}
 \multicolumn{1}{p{2.9cm}}{\textbf{GRÁFICA PARA $\gamma$}} & \multicolumn{1}{p{2.9cm}}{\textbf{GRÁFICA PARA $T$}} & \multicolumn{1}{p{2.9cm}}{\textbf{GRÁFICA PARA $T$ y $\gamma$}} & \multicolumn{1}{p{2.9cm}}{\textbf{ANOVA}}  \\ \hline
@@ -469,7 +443,7 @@ Se quiere entonces, encontrar un valor de Gamma que ofrezca buenos resultados, y
 \label{exp3}
 \end{table}
 
-Tres de estos resultados se pueden ver en la tabla \ref{exp3}, donde, aunque el valor del estadístico de prueba F de las tablas ANOVA aún no presenta valores lejanos a la unidad, el ejemplo de la segunda fila muestra valores para $PR(>F)$ menores a 0.05, para ambas variables. 
+Tres de estos resultados se pueden ver en la tabla \ref{exp3}, donde, aunque el valor del estadístico de prueba $F$ de las tablas ANOVA aún no presenta valores lejanos a la unidad, el ejemplo de la segunda fila muestra valores para $PR(>F)$ menores a 0.05, para ambas variables. 
  
 Estos cambios, que se ocasionan por la influencia de la aleatoriedad que aún se presenta, no permiten, una vez más, concluir que los valores de alguna de estas variables independientes influye efectivamente en los de la variable dependiente. 
  
@@ -479,12 +453,12 @@ Aún así, en las gráficas de la tabla \ref{exp3} se observa que se obtienen re
 
 %Se diseña un experimento con las dos variables independientes: T y $\gamma$, correspondientes a la cantidad de iteraciones y a la variable que, multiplicada por la ganancia total asociada a la secuencia de nodos que se haya probado, como parámetro de aprendizaje. Se maneja la misma variable dependiente, corresponde a la diferencia normalizada de las ganancias como en los experimentos previos.
 
-Para este experimento se usan valores para T de 10000 a 100000 iteraciones con intervalos de 10000 y valores de $\gamma$ del orden de $10^{-4}$, teniendo en cuenta que fue la cifra que mostró los valores más bajos para la variable dependiente. 
+Para este experimento se usan valores para $T$ de 10000 a 100000 iteraciones con intervalos de 10000 y valores de $\gamma$ del orden de $10^{-4}$, teniendo en cuenta que fue la cifra que mostró los valores más bajos para la variable dependiente. 
 
 Las gráficas correspondientes a tres ejecuciones de este experimento con sus gráficas y resultados del ANOVA, se presentan en la tabla \ref{exp4}.
 
-\begin{table}[]
-\caption{Experimento cuatro}
+\begin{table}[h]
+\caption{ANOVA para el Experimento tres con Gamma}
 \centering
 \begin{tabular}[c]{llll}
 \multicolumn{1}{p{2.95cm}}{\textbf{GRÁFICA PARA $\gamma$}} & \multicolumn{1}{p{2.95cm}}{\textbf{GRÁFICA PARA $T$}} & \multicolumn{1}{p{2.95cm}}{\textbf{GRÁFICA PARA $T$ y $\gamma$}} & \multicolumn{1}{p{2.95cm}}{\textbf{ANOVA}}  \\ \hline
@@ -496,11 +470,11 @@ Las gráficas correspondientes a tres ejecuciones de este experimento con sus gr
 \label{exp4}
 \end{table}
 
-Aunque las gráficas generadas al ejecutar este experimento varias veces, con los mismo valores de T y de $\gamma$, parecen diferentes, mantienen valores para la variable independiente muy cercanos a cero, con valores inferiores al 2\% para todos los casos probados, lo que permite establecer una baja influencia de la aleatoriedad.
+Aunque las gráficas generadas al ejecutar este experimento varias veces, con los mismo valores de $T$ y de $\gamma$, parecen diferentes, mantienen valores para la variable independiente muy cercanos a cero, con valores inferiores al 2\% para todos los casos probados, lo que permite establecer una baja influencia de la aleatoriedad.
 
 Los  valores del estadístico de prueba $F$ y de $PR(>F)$ de las tablas ANOVA muestran que no hay una dependencia entre los valores de la variable $\gamma$ y los resultados de la variable dependiente, puesto que $F$ toma valores cercanos a 1 y, $PR(>F)$ es mayor a 0.05. 
 
-La independencia aparente de la variable $\gamma$ en los valores que toma la diferencia promedio de ganancias resulta ser un aspecto deseable para el experimento, puesto que los dos valores tomados para $Gamma$ solo difieren en $1*10^{-5}$, como se aprecia más claramente en la figura \ref{CajasGamma} así que lo ideal era obtener resultados similares. 
+La independencia aparente de la variable $\gamma$ con los valores que toma la variable dependiente (diferencia promedio de ganancias distorsionadas) resulta ser un aspecto deseable para el experimento, puesto que los dos valores tomados para $\gamma$ solo difieren en $1*10^{-5}$, como se aprecia más claramente en la figura \ref{CajasGamma}, porque lo esperado era obtener resultados similares. 
 
 \begin{figure}[H]
 	\centering
@@ -509,28 +483,30 @@ La independencia aparente de la variable $\gamma$ en los valores que toma la dif
 	\label{CajasGamma}
 \end{figure}
 
-De otra parte, en dos de los tres casos hay influencia de los valores que se dan a la variable $T$ sobre los obtenidos en la variable dependiente, ya que el valor de la probabilidad $PR(>F)$ es menor que 0.05; aspecto que resulta positivo para el modelo, porque se acercan a un control inicial de los efectos de la aleatoriedad.
+De otra parte, en dos de los tres casos hay influencia de los valores que se dan a la variable $T$ sobre los obtenidos en la variable dependiente, ya que el valor de la probabilidad $PR(>F)$ es menor que 0.05; aspecto que resulta positivo para el modelo, porque lo acercan a un control inicial de los efectos de la aleatoriedad.
 
-De aquí que, con cualquier valor de T superior a 50000 iteraciones se obtuvieron excelentes resultados, con medias en la diferencias promedio de ganancias inferiores a 0.003 y varianzas muy pequeñas. Se elige entonces el valor de 100000 para la variable T y de $10^{-4}$ para la variable $\gamma$, para generar el histograma en los que se apreciará cómo, efectivamente, la mayor parte de los valores de la variable dependiente se acerca a cero. Dicho histograma se muestra en la figura \ref{histo4}.
+De aquí que, con cualquier valor de $T$ superior a 50000 iteraciones se obtuvieron excelentes resultados, con medias en la diferencias promedio de ganancias inferiores a 0.003 y varianzas muy pequeñas. Se elige entonces el valor de 100000 para la variable $T$ y de $10^{-4}$ para la variable $\gamma$, para generar el histograma en el que se apreciará cómo, efectivamente, la mayor parte de los valores de la variable dependiente se acerca a cero. Dicho histograma se muestra en la figura \ref{histo4}.
 
-\begin{figure}[H]
+\begin{figure}[h]
 	\centering
 	\includegraphics[scale=0.5]{Histograma_gamma3.jpg}
 	\caption{Diferencia normalizada a la ganancia real}
 	\label{histo4}
 \end{figure}
 
-Vale aclarar que esta ejecución se realizó varias veces, encontrando siempre resultados similares, por lo que no se hace ningún comparativo adicional, sino que  se concluye que los valores probados en este experimento arrojarán el resultado correcto.
+Vale aclarar que esta ejecución se realizó varias veces, encontrando siempre resultados similares, por lo que no se hace ningún comparativo adicional, sino que  se concluye que los valores probados en este experimento arrojan el resultado correcto.
 
-Teniendo establecidos los parámetros de número de iteraciones y del factor de aprendizaje $\delta$, se procede a probar el desempeño del algoritmo con grafos generados por él mismo.
+Teniendo establecidos los parámetros de número de iteraciones y del factor de aprendizaje $\gamma$, se procede a probar el desempeño del algoritmo con grafos generados de forma aleatoria.
 
-\section{Generando el grafo aleatoriamente}
+\section{Generación de un grafo aleatorio}
 
-Se ejecutó el programa de forma que permitiera como datos de entrada, además de los ya implementados, la cantidad de etapas del grafo y la cantidad de nodos en cada etapa. La matriz de adyacencia se ha programado para que cada nodo tenga al menos uno adyacente de la siguiente etapa, excepto si es de la ultima etapa, además para que la densidad de conectividad entre los nodos sea del 66.67\%. 
+De acuerdo al diseño explicado en la sección \ref{algoritmos}, se ejecutó el programa de forma que aceptara como datos de entrada, además de los ya implementados, la cantidad de etapas del grafo y la cantidad de nodos en cada etapa. La generación de la matriz de adyacencia ha previsto para que cada nodo tenga al menos un nodo adyacente de la siguiente etapa, excepto si es de la ultima etapa, así como una densidad de conectividad entre los nodos del 66.67\%. 
 
-Los valores de los \texit{bandits} se generan también de forma aleatoria con media en cero y desviación estándar de una unidad, pero se modifican computacionalmente para que uno de los nodos de cada etapa, elegido al azar, tenga asociada una ganancia positiva superior a la de los demás nodos de su etapa. Además, se ajustaron estos valores para que las ganancias sean del orden de las centenas, como los del grafo para el que se habían ajustado los parámetros de cantidad de iteraciones y de $\delta$, ya que este último depende de la magnitud de la ganancia que se obtenga en cada iteración.
+Los valores de utilidad de los \textit{bandits} se generan también de forma aleatoria con media en cero y desviación estándar de una unidad, pero se modifican computacionalmente para que uno de los nodos de cada etapa, elegido al azar, tenga asociada una ganancia positiva superior a la de los demás nodos de su etapa. 
 
-El programa arroja resultados favorables con una cantidad de etapas $L$ entre 5 y 12, observados en la convergencia de sus ganancias hacia la mayor ganancia real dentro de los caminos probados por el algoritmo, como la que se aprecia en la figura \ref{Gangraforandom}. Uno de los casos se verifica manualmente, obteniendo el grafo a partir de la matriz de adyacencia generada aleatoriamente y de los valores generados para sus \texit{bandits}, con un valor de $L$ de 9 etapas y los siguientes valores para la cantidad de nodos por etapa: [1. 3. 4. 4. 3. 1.].
+Los valores generados para los \textit{bandits} se ajustaron para que las ganancias promedio quedaran del orden de las centenas, como las del grafo de prueba, ya que el valor de $\gamma$ depende de la magnitud de la ganancia que se obtenga en cada iteración.
+
+El programa arroja resultados favorables con cantidad de etapas $L$ entre 5 y 12, observados en la convergencia del promedio de sus ganancias hacia la mayor ganancia real, dentro de los caminos probados por el algoritmo, como la que se aprecia en la figura \ref{Gangraforandom}. Uno de los casos se verifica manualmente, obteniendo el grafo a partir de la matriz de adyacencia generada aleatoriamente y de los valores generados para sus \textit{bandits}, con un valor para $L$ de 9 etapas y los siguientes valores para la cantidad de nodos por etapa: [1. 3. 4. 4. 3. 1.].
 
 La gráfica se muestra en la figura \ref{graforandom} y su matriz de adyacencia es la siguiente:
 
@@ -562,7 +538,7 @@ Así mismo el vector de \textit{bandits} generado de forma aleatoria fue el sigu
 
 $B$ = [196.02255721, 9.32455363, 47.72564534, 66.21935444, 275.7996602, 6.62172573, 190.49629308, 13.33418851, 210.36419278, 37.39029137, 191.40773576, 117.1717095, 40.02228911, 220.45436046, 32.32878409, -125.16559689]
 
-\begin{figure}[H]
+\begin{figure}[h]
 	\centering
 	\includegraphics[scale=0.4]{GrafoRandom.png}
 	\caption{Grafo generado en forma aleatoria}
@@ -571,33 +547,29 @@ $B$ = [196.02255721, 9.32455363, 47.72564534, 66.21935444, 275.7996602, 6.621725
 
 \subsection{Prueba}
 
-Se recuerda que las variables independientes son: la cantidad de Iteraciones y el factor de aprendizaje $deltha$. Se recuerda también que este último parámetro se obtuvo de multiplicar el coeficiente $Gamma$ por la ganancia que cada vector solución va recibiendo al final de la iteración en que se genera. El valor asignado al parámetro de $T$ es de 80000 iteraciones y el de $\gamma$ es de 0.000003. 
+Se recuerda que las variables independientes son: la cantidad de Iteraciones $T$ y el factor de aprendizaje $\gamma$. El valor asignado al parámetro de $T$ es de 80000 iteraciones y el de $\gamma$ es de 0.000003. 
 
-De otra parte, la variable dependiente que se ha manejado en los experimentos anteriores ha sido el promedio de diferencias normalizadas entre las ganancias obtenidas y la ganancia óptima, pero para probar el modelo con el grafo aleatorio, se adicionó un indicador de salida que cuenta las veces que el vector solución generado por la aplicación correspondió con el vector óptimo.
+De otra parte, en esta prueba, además de la variable dependiente que se ha manejado en los experimentos anteriores, que ha sido el promedio de diferencias de ganancias normalizadas, se adiciona un indicador de salida que cuenta las veces que el vector solución generado por la aplicación corresponde con el vector óptimo.
 
-Los valores óptimos del vector solución y de su ganancia real asociada los establecen la misma aplicación, guardando el valor de la ganancia real máxima que se vaya obteniendo y su argumento (es decir el vector objeto de dicha ganancia), puesto que, con la gran cantidad posible de rutas en un grafo aleatorio, sería tedioso conseguir estos valores manualmente.
+Se mantiene la funcionalidad de la aplicación para establecer los valores óptimos del vector solución y de su ganancia real asociada, los que se obtienen guardando el valor de la ganancia real máxima que se vaya generando y su argumento (es decir el vector objeto de dicha ganancia).
 
 Luego de la 80000 iteraciones con los parámetros ya explicados se obtuvieron las siguientes salidas:
 
 \begin{itemize}
 \item Promedio de la diferencia entre las ganancias obtenidas en cada iteración y la ganancia óptima: 0.019839554951030753, que es un valor inferior al 2\%.
 \item Porcentaje de aciertos entre los vectores generados en cada iteración y el vector óptimo: 0.9531375, valor que supera el 95\% de coincidencias.
-\item Vector óptimo = [0, 3, 4, 10, 13, 15]
+\item Vector óptimo = [0, 3, 4, 10, 13, 15], que corresponde al calculado del grafo de forma manual.
 \end{itemize}
 
-Revisado el grafo de forma manual, se observa que el vector encontrado corresponde con el real, como se puede corroborar en la figura \ref{graforandom}.
+Además se generó la gráfica de convergencia de la ganancia que se obtienen en cada iteración y el resultado se muestra en la figura \ref{Gangraforandom}. En esta figura el eje horizontal corresponde al número de la iteración y el eje vertical a la ganancia obtenida en cada iteración.
 
-Además se generó la gráfica de convergencia de la ganancia que se obtienen en cada iteración y el resultado obtenido se muestra en la figura \ref{Gangraforandom}.
-
-\begin{figure}[]
+\begin{figure}[h]
 	\centering
-	\includegraphics[scale=0.8]{GanGrafoRandom.png}
+	\includegraphics[scale=0.64]{GanGrafoRandom.png}
 	\caption{Convergencia de ganancia con un grafo generado en forma aleatoria}
 	\label{Gangraforandom}
 \end{figure}
 
-En esta figura el eje horizontal corresponde al número de la iteración y el eje vertical a la ganancia obtenida en cada iteración. 
-
-Es importante aclarar que, no se espera que el promedio de diferencias entre ganancias llegue a ser cero ni que el porcentaje de aciertos del vector generado con el vector óptimo llegue a ser uno, puesto que el autómata toma un tiempo en aprender la ruta óptima y los valores que haya tenido que probar para este aprendizaje, siempre se tendrán en cuenta para el cálculo de estos valores. 
+Es importante aclarar que, no se espera que el promedio de diferencias entre ganancias llegue a ser cero ni que el porcentaje de aciertos del vector generado con el vector óptimo llegue a ser uno, puesto que el autómata toma un tiempo en aprender la ruta óptima y solo se tendrán en cuenta los valores que el autómata haya tenido que probar durante las iteraciones. 
 
 Finalmente se resalta el hecho de que la gráfica se estabiliza después de solo 10000 iteraciones, pero es necesario ejecutar cerca de 100000 para obtener resultados aceptable en el promedio normalizado de diferencias entre ganancias y en el porcentaje de aciertos con el vector óptimo; conseguir un criterio de parada para el algoritmo que disminuya el número de iteraciones será parte de la continuidad de esta investigación.
