--- a/Capitulo1.tex
+++ b/Capitulo1.tex
@@ -38,13 +38,13 @@ Si bien, las industrias de BPMS han evolucionado hacia las iBPMS, que son BPMS c
 
 \subsection{Sistematización del problema}
 
-Basados en la situación descrita, se requiere verificar, desde una base matemática, la posibilidad de dar manejo a la incertidumbre en la toma de decisiones para un problema susceptible de ser representado en un grafo por etapas ********, así como, establecer su modelo de aprendizaje y la forma en que se ha de implementar; de la misma manera, se hace necesario recomendar cómo el problema de la gestión de casos de los BPMS se puede adaptar al resultado de esta propuesta. 
+Basados en la situación descrita, se requiere verificar, desde una base matemática, la posibilidad de dar manejo a la incertidumbre en la toma de decisiones para un problema susceptible de ser representado en un grafo por etapas, así como, establecer su modelo de aprendizaje y la forma en que se ha de implementar; de la misma manera, se hace necesario recomendar cómo el problema de la gestión de casos de los BPMS se puede adaptar al resultado de esta propuesta. 
 
 Ante la necesidad de automatizar este proceso de decisiones, se plantea la siguiente pregunta de investigación:
 
 \textbf{Pregunta problema:}
 
-¿Qué características debe tener un algoritmo que apoye la toma de decisiones en el tiempo, con pasos discretos, cuando las recompensas de la selección de cada una de las decisiones solo se conoce al final de n pasos, como puede ser el problemas de la gestión de casos en los BPMS?
+¿Qué características debe tener un algoritmo que apoye la toma de decisiones en el tiempo, con pasos discretos, cuando las recompensas de la selección de cada una de las decisiones solo se conoce al final de $l$ pasos, como puede ser el problemas de la gestión de casos en los BPMS?
 
 \textbf{Preguntas específicas}
 
@@ -73,7 +73,7 @@ Para resolver estos interrogantes, se plantean los objetivos de la investigació
 
 \section{Objetivo general}
 
-Diseñar e implementar un algoritmo que apoye la toma de decisiones en el tiempo, con pasos discretos, cuando la recompensa de la selección de cada una de las decisiones del problema solo se conoce al final de n pasos, como puede ser el problema de la gestión de casos en los BPMS.
+Diseñar e implementar un algoritmo que apoye la toma de decisiones en el tiempo, con pasos discretos, cuando la recompensa de la selección de cada una de las decisiones del problema solo se conoce al final de $l$ pasos, como puede ser el problema de la gestión de casos en los BPMS.
 
 \section{Objetivos específicos}\label{objespe}
 
