--- a/MiTesis.tex
+++ b/MiTesis.tex
@@ -83,6 +83,7 @@
 %\include{Capitulo4}
 \include{CapituloResultados}
 \include{Capitulo5}
+\include{Discusion}
 \include{Conclusiones}
  
 \appendix
