--- a/Conclusiones.tex
+++ b/Conclusiones.tex
@@ -1,23 +1,18 @@
 \chapter{Conclusiones y trabajo futuro}
-Con esta tesis se presenta a la comunidad científica un modelo no reportado con una estructura de aprendizaje por refuerzo para problemas específicos por etapas de estado y tiempo finitos, dispuestos en un grafo por etapas que aprovecha estructura, para aprender de forma eficiente ua trayectoria óptima que de be seguir un agente.
 
-Es una estructura sencilla, un modelo de decisión de Markov. 
+Al finalizar el trabajo de tesis, se establece que se ha dado solución a lo planteado en la sistematización del problema científico, y por ende, en los objetivos propuestos, así:
 
-Se inscribe dentro del campo de Aprendizaje por refuerzo para sistemas de decisión de Markov de estado finito y tiempo discreto (por episodios) y el número de tiempos en cada episodio también es finito.
+\begin{itemize}
+    \item Se logró con el modelo propuesto, dar manejo a la incertidumbre en la toma de decisiones para problemas que se puedan representar con el grafo por etapas propuesto, desde una base matemática y teórica.    
+    \item Se construyó un modelo de aprendizaje y se probó la convergencia de la ganancia hallada hacia una ganancia real, con valores aleatorios para el grafo propuesto.   
+    \item El modelo de aprendizaje maneja como parámetros la cantidad de tiempos de ejecución y el valor de un factor de aprendizaje $\gamma$, que dosifica la magnitud de la ganancia que se ha de tener en cuenta como retroalimentación en el aprendizaje en cada iteración.
+    \item Se encuentra que el uso de las teorías de los \textit{n-armed-bandits}, facilitan el desarrollo de una aplicación computacional sencilla, como se mostró en los cuadros de algoritmos del documento.   
+    \item Se logra modelar, en el grafo por etapas, el manejo de casos dinámicos por parte de las BPMS, partiendo de la notación CMMN y siguiendo las recomendaciones consignadas en el capítulo \ref{aplica}.   
+\end{itemize} 
 
-Está estructurado en un grafo dirigido de principio a fin y esa estructura simple permite hacer un muestre eficiente para descubrir las trayectorias óptimas que debe seguir el agente.
+Con esta tesis se presenta a la comunidad científica un modelo, no reportado, con una estructura de aprendizaje por refuerzo para problemas específicos por etapas de estado y tiempo finitos, dispuestos en un grafo por etapas, para aprender de forma eficiente una trayectoria ́óptima que debe seguir un agente.
 
-La contribución básica teórica de ester trabajo es el encontrar una estructura sencilla de un proceso de decisión de Mrkov que estamos aprovechando para muestrear de modo eficiente.
-
-Es una particularización de un problema muy general de Aprendizaje por refuerzo o de problemas de decisión de Markov que se resuelven mediante muestreo de Boltzman (Caso especial: aprovechar la estructura del Grafo por etapas)-> contribución a nivel metodológico y teórico. 
-
-Una de las aplicaciones que se prevé para el modelo propuesto es el manejo de casos dinámicos por parte de las BPMS, dado que, siguiendo la notación CMMN, el caso se deja modelar con un grafo, el cual es susceptible de adaptar al grafo por etapas que se presenta en esta tesis, siguiendo las recomendaciones consignadas en el capítulo \ref{aplica}.
-
-Muchos son los modelos de grafos que se han adecuado para la solución de problemas específicos y para los que se han creado algoritmos, con sus posteriores mejoras y adaptaciones. El modelo de grafo por etapas con nodos disjuntos de etapa a  etapa, no se encontró en la revisión de literatura que se hizo y se constituye en una alternativa para el modelado de problemas de decisión con alta incertidumbre, donde el efecto de la selección de cada nodo, solo se conoce al seleccionar el nodo de la última etapa.
-
-El modelo de aprendizaje de probabilidades de transición entre nodos tiene bases matemáticas y maneja como parámetros la cantidad de tiempos de ejecución y el valor de un factor de aprendizaje $\delta$. La investigación arrojó que tal factor debe depender del signo y la magnitud de la ganancia que se obtenga en cada iteración, por lo que finalmente se manejó un coeficiente para dicho factor, que se denota como $\gamma$.
-
-Para un grafo sencillo de etapas y 13 nodos con \textit{bandits} asociados del orden de las centenas, se concluyó que con 80000 tiempos y un coeficiente para el factor de aprendizaje del orden de 10e-4, se obtiene una convergencia aceptable hacia la ruta óptima. Al realizar experimentos con grafos de mayor dimensión, fue necesario ajustar el coeficiente del factor de aprendizaje con cantidades de menor orden, porque el valor de la ganancia aumentó por el incremento en el número de etapas.
+Se inscribe dentro del campo de Aprendizaje por Refuerzo para sistemas de decisión de Markov de estado finito y tiempo discreto (por episodios) con un número de tiempos en cada episodio también finito. La estructura simple de un grafo dirigido permite hacer un muestre eficiente para descubrir las trayectorias óptimas que debe seguir el agente. 
 
 Aunque la aproximación de las probabilidades de transición de entre nodos, generó resultados satisfactorios, es un trabajo en el que se puede avanzar en varios aspectos:
 \begin{itemize}
