función de valor

--- a/Capitulo2New.tex
+++ b/Capitulo2New.tex
@@ -167,7 +167,7 @@ Luego de estas revisiones se procede a describir las bases matemáticas que sopo
 
 \section{Fundamentos matemáticos}
 
-Como ya se ha mencionado, se pretende usar un modelo estructurado que aproxime los valores de una matriz de probabilidades de transición de estados, que se relacionen con los valores de utilidad que en un momento dado tengan los nodos candidatos a ser visitados.
+Como ya se ha mencionado, se pretende usar un modelo estructurado que aproxime una matriz de probabilidades de transición de estados, que se relacionen con la función de valor que en cada tiempo tengan los nodos.
 
 Un modelo de probabilidades de transición de estados se adapta al problemas de búsqueda en el grafo por etapas con cualquier cantidad de nodos y remplazaría la forma de seleccionar una acción que se explicó para los \textit{bandits} en las ecuaciones \ref{Q} y \ref{A} \citep{sutton1998introduction}.
 
